# DimensionsViewerPlugin

./: CMakeLists.txt  README.md  conanfile.py  conanfile.py.txt
.github/action/action-conan-linux-build/: action.yml
.github/actions/action-conan-linux-build/: action.yml
.github/actions/action-conan-windows-build/: action.yml
.github/workflows/: build.yml
src/: Boolean.cpp  Boolean.h  BooleanItem.cpp  BooleanItem.h  Channel.cpp  Channel.h  ChannelAction.cpp  ChannelAction.h  ChannelItem.cpp  ChannelItem.h  ChannelSettingsWidget.cpp  ChannelSettingsWidget.h  ChannelSettingsWidget.ui  ChannelStylingAction.cpp  ChannelStylingAction.h  ChannelWidget.cpp  ChannelWidget.h  ChannelWidget.ui  Channels.cpp  Channels.h  ChannelsAction.cpp  ChannelsAction.h  ChannelsItem.cpp  ChannelsItem.h  ChannelsWidget.cpp  ChannelsWidget.h  ChannelsWidget.ui  Color.cpp  Color.h  ColorItem.cpp  ColorItem.h  Common.h  Configuration.cpp  Configuration.h  ConfigurationAction.cpp  ConfigurationAction.h  ConfigurationWidget.cpp  ConfigurationWidget.h  ConfigurationWidget.ui  Configurations.cpp  (+119 more)
src/res/web/: DimensionsViewer.html  DimensionsViewer.js  Vega.js  Vega5.js  VegaEmbed5.js  VegaLite4.js
